# rget

./: Cargo.toml
src/: main.rs
