[package]
name = "rget"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.2"
reqwest = { version = "0.11", features = ["stream"] }
sha2 = "0.10"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "fs"]}
indicatif = "0.17"
futures = "0.3"
